@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>Denotes the expansion properties that a widget will have when it (or it's parent) is resized.</summary>
-    <remarks>To be added</remarks>
+    <summary>Denotes the expansion properties that a <see cref="T:Gtk.Widget"/> will have when it (or its parent) is resized.</summary>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +34,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>the widget should expand to take up any extra space in its container that has been allocated.</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Widget"/> should expand to take up any extra space in its container that has been allocated.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Shrink">
@@ -46,8 +46,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>the widget should shrink as and when possible.</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Widget"/> should shrink when possible.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Fill">
@@ -58,8 +58,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>the widget should fill the space allocated to it.</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Widget"/> should fill the space allocated to it.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="value__">
