@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>The method to use when making the curve.</summary>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -35,7 +35,7 @@
       <Parameters />
       <Docs>
         <summary>linear interpolation</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Spline">
@@ -47,7 +47,7 @@
       <Parameters />
       <Docs>
         <summary>spline interpolation</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Free">
@@ -59,7 +59,7 @@
       <Parameters />
       <Docs>
         <summary>free form curve </summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="value__">
