@@ -8,7 +8,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>Used for justifying the text inside a <see cref="T:Gtk.Label" /> widget.</summary>
-    <remarks>To be added</remarks>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +34,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>The text is placed at the left edge of the label.</summary>
-        <remarks>To be added</remarks>
+        <summary>The text is placed at the left edge of the <see cref="T:Gtk.Label"/>.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Right">
@@ -46,8 +46,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>The text is placed at the right edge of the label.</summary>
-        <remarks>To be added</remarks>
+        <summary>The text is placed at the right edge of the <see cref="T:Gtk.Label"/>.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Center">
@@ -58,8 +58,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>The text is placed in the center of the label.</summary>
-        <remarks>To be added</remarks>
+        <summary>The text is placed in the center of the <see cref="T:Gtk.Label"/>.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Fill">
@@ -70,8 +70,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>The text is placed is distributed across the label.</summary>
-        <remarks>To be added</remarks>
+        <summary>The text is placed is distributed across the <see cref="T:Gtk.Label"/>.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="value__">
