@@ -8,7 +8,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>Represents the packing location of <see cref="T:Gtk.Box" /> children. (See: <see cref="T:Gtk.VBox" />, <see cref="T:Gtk.HBox" />, and <see cref="T:Gtk.ButtonBox" />).</summary>
-    <remarks>To be added</remarks>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -35,7 +35,7 @@
       <Parameters />
       <Docs>
         <summary>The child is packed into the start of the box.</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="End">
@@ -47,7 +47,7 @@
       <Parameters />
       <Docs>
         <summary>The child is packed into the end of the box</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="value__">
