@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>Determines when a scroll bar will be visible.</summary>
-    <remarks>To be added</remarks>
+    <summary>Determines when a <see cref="T:Gtk.Scrollbar"/> will be visible.</summary>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +34,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>The scrollbar is always visible.</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Scrollbar"/> is always visible.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Automatic">
@@ -46,8 +46,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>The scrollbar will appear and disappear as necessary.</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Scrollbar"/> will appear and disappear as necessary.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Never">
@@ -58,8 +58,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>The scrollbar will never appear.</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Scrollbar"/> will never appear.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="value__">
