@@ -8,7 +8,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>Used to change the appearance of an outline typically provided by a <see cref="T:Gtk.Frame" />.</summary>
-    <remarks>To be added</remarks>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -35,7 +35,7 @@
       <Parameters />
       <Docs>
         <summary>No outline.</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="In">
@@ -47,7 +47,7 @@
       <Parameters />
       <Docs>
         <summary>The outline is bevelled inwards.</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Out">
@@ -71,7 +71,7 @@
       <Parameters />
       <Docs>
         <summary>The outline itself is an inward bevel, but the frame is an outward bevel.</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="EtchedOut">
@@ -83,7 +83,7 @@
       <Parameters />
       <Docs>
         <summary>The outline itself is an outward bevel, but the frame is an inward bevel.</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="value__">
