@@ -58,7 +58,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>Affects widget size requisitions horizontally.</summary>
+        <summary>Affects widget size requisitions vertically.</summary>
         <remarks />
       </Docs>
     </Member>
