@@ -8,7 +8,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>Determines the direction of a sort.</summary>
-    <remarks>To be added</remarks>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -35,7 +35,7 @@
       <Parameters />
       <Docs>
         <summary>Sorting is in ascending order.</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Descending">
@@ -47,7 +47,7 @@
       <Parameters />
       <Docs>
         <summary>Sorting is in descending order.</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="value__">
