@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Set the type of new elements that are added to a <see cref="T:Gtk.Toolbar"/>.</summary>
+    <remarks><see cref="T:Gtk.ToolbarChildType"/> is used to set the type of new elements that are added to a <see cref="T:Gtk.Toolbar"/>.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +34,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>a space</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Button">
@@ -46,8 +46,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>a <see cref="T:Gtk.Button"/></summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Togglebutton">
@@ -58,8 +58,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>a <see cref="T:Gtk.ToggleButton"/></summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Radiobutton">
@@ -70,8 +70,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>a <see cref="T:Gtk.RadioButton"/></summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Widget">
@@ -82,8 +82,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>a standard <see cref="T:Gtk.Widget"/></summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="value__">
