@@ -1,6 +1,16 @@
 2003-06-23  John Luke  <jluke@cfl.rr.com>
 	* en/Gtk/WindowGroup.xml: add some info
 	* en/Gtk/WindowPosition.xml: update
+	* en/Gtk/WindowType.xml: don't use contractions
+	* en/Gtk/ToolbarChildType.xml: add first draft
+	* en/Gtk/SortType.xml: update
+	* en/Gtk/SizeGroupMode.xml: update
+	* en/Gtk/ShadowType.xml: update
+	* en/Gtk/PolicyType.xml: update
+	* en/Gtk/PackType.xml: update
+	* en/Gtk/Justification.xml: update
+	* en/Gtk/CurveType.xml: update
+	* en/Gtk/AttachOptions.xml: update
 
 2003-06-15  John Luke  <jluke@cfl.rr.com>
     * en/Gtk/Dialog.xml: add more info, add example
